--- a/index.html
+++ b/index.html
@@ -105,14 +105,11 @@
 
     <!-- Page Content -->
     <div class="container">
-
-
-
-
-
-
-
-
+        .<div class="row">
+          <div class="col-md-4"><img src="http://placehold.it/370x250/bada55?text=Vasa_Reklama"></div>
+          <div class="col-md-4"><img src="http://placehold.it/370x250/bada55?text=Vasa_Reklama"></div>
+          <div class="col-md-4"><img src="http://placehold.it/370x250/bada55?text=Vasa_Reklama"></div>
+        </div>
         <hr>
 
         <!-- Footer -->
