--- a/report.html
+++ b/report.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">Bootstrap C</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -56,7 +56,6 @@
                     <li class="active">
                         <a href="report.html">Tabulky</a>
                     </li>
-
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
