Pridanie produktov (bez foto)

--- a/index.html
+++ b/index.html
@@ -105,10 +105,24 @@
 
     <!-- Page Content -->
     <div class="container">
-        .<div class="row">
-          <div class="col-md-4"><img src="http://placehold.it/370x250/bada55?text=Vasa_Reklama"></div>
-          <div class="col-md-4"><img src="http://placehold.it/370x250/bada55?text=Vasa_Reklama"></div>
-          <div class="col-md-4"><img src="http://placehold.it/370x250/bada55?text=Vasa_Reklama"></div>
+        <div class="row">
+          <div class="produkt col-md-4"><img src="http://placehold.it/370x250/bada55?text=Vasa_Reklama"></div>
+          <div class="produkt col-md-4"><img src="http://placehold.it/370x250/bada55?text=Vasa_Reklama"></div>
+          <div class="produkt col-md-4"><img src="http://placehold.it/370x250/bada55?text=Vasa_Reklama"></div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
+          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
+          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
+
+          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
+          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
+          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
+
+          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
+          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
+          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
         </div>
         <hr>
 
