Pridanie produktov foto

--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
         </div>
         <hr>
         <div class="row">
-          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
-          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
-          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
+          <div class="produkt col-md-4"><img src="img/logo1.jpg"></div>
+          <div class="produkt col-md-4"><img src="img/logo2.jpg"></div>
+          <div class="produkt col-md-4"><img src="img/logo3.jpg"></div>
 
-          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
-          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
-          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
+          <div class="produkt col-md-4"><img src="img/logo4.jpg"></div>
+          <div class="produkt col-md-4"><img src="img/logo5.jpg"></div>
+          <div class="produkt col-md-4"><img src="img/logo6.jpg"></div>
 
-          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
-          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
-          <div class="produkt col-md-4"><img src="http://placehold.it/350x200/0ad?text=Vasa_Reklama"></div>
+          <div class="produkt col-md-4"><img src="img/logo7.jpg"></div>
+          <div class="produkt col-md-4"><img src="img/logo8.jpg"></div>
+          <div class="produkt col-md-4"><img src="img/logo9.jpg"></div>
         </div>
         <hr>
 
