Pridanie contact.html

--- a/contact.html
+++ b/contact.html
@@ -63,69 +63,18 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Header Carousel -->
-    <header id="myCarousel" class="carousel slide">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <div class="fill" style="background-image:url('img/car1.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 1</h2>
-                </div>
-            </div>
-            <div class="item">
-                <div class="fill" style="background-image:url('img/car2.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 2</h2>
-                </div>
-            </div>
-            <div class="item">
-                <div class="fill" style="background-image:url('img/car3.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 3</h2>
-                </div>
-            </div>
-        </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="icon-prev"></span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="icon-next"></span>
-        </a>
-    </header>
+  
 
     <!-- Page Content -->
     <div class="container">
         <div class="row">
-          <div class="produkt col-md-4 col-sm-6"><img src="http://placehold.it/370x250/bada55?text=Vasa_Reklama"></div>
-          <div class="produkt col-md-4 col-sm-6"><img src="http://placehold.it/370x250/bada55?text=Vasa_Reklama"></div>
-          <div class="produkt col-md-4 col-sm-6"><img src="http://placehold.it/370x250/bada55?text=Vasa_Reklama"></div>
+            <div class="col-md-6">
+
+            </div>
+            <div class="col-md-6">
+
+            </div>
         </div>
-        <hr>
-        <div class="row">
-          <div class="produkt col-md-4 col-sm-6"><img src="img/logo1.jpg"></div>
-          <div class="produkt col-md-4 col-sm-6"><img src="img/logo2.jpg"></div>
-          <div class="produkt col-md-4 col-sm-6"><img src="img/logo3.jpg"></div>
-
-          <div class="produkt col-md-4 col-sm-6"><img src="img/logo4.jpg"></div>
-          <div class="produkt col-md-4 col-sm-6"><img src="img/logo5.jpg"></div>
-          <div class="produkt col-md-4 col-sm-6"><img src="img/logo6.jpg"></div>
-
-          <div class="produkt col-md-4 col-sm-6"><img src="img/logo7.jpg"></div>
-          <div class="produkt col-md-4 col-sm-6"><img src="img/logo8.jpg"></div>
-          <div class="produkt col-md-4 col-sm-6"><img src="img/logo9.jpg"></div>
-        </div>
-        <hr>
-
         <!-- Footer -->
         <footer>
             <div class="row">
