--- a/contact.html
+++ b/contact.html
@@ -47,10 +47,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                  <li class="active">
+                  <li >
                       <a href="index.html">Domov</a>
                   </li>
-                  <li>
+                  <li class="active" >
                       <a href="contact.html">Kontakt</a>
                   </li>
                   <li>
@@ -63,18 +63,35 @@
         <!-- /.container -->
     </nav>
 
-  
 
     <!-- Page Content -->
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10613.968705818394!2d18.07041030028895!3d48.31261750190701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476b3f1981848283%3A0x8104cf3faa65f4d1!2sAAA+Auto+Nitra!5e0!3m2!1sen!2ssk!4v1462448981286" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <div class="col-md-6">
-
+              <label for="name" class="h4">Meno</label>
+              <input type="text" class="form-control" id="name" placeholder="Vlozit meno" required>
+            </div>
+            <div class="col-md-6">
+              <label for="name" class="h4">Priezvisko</label>
+              <input type="text" class="form-control" id="name" placeholder="Vlozit priezvisko" required>
+            </div>
+            <div class="col-md-6">
+              <label for="name" class="h4">Email</label>
+              <input type="text" class="form-control" id="name" placeholder="Vlozit email" required>
+            </div>
+            <div class="col-md-6">
+                <label for="message" class="h4 ">Message</label>
+                <textarea id="message" class="form-control" rows="5" placeholder="Napiste spravu" required></textarea>
+            </div>
+            <div class="col-md-6">
+              <button type="submit" id="form-submit" class="btn btn-danger btn-md pull-left ">Submit</button>
             </div>
         </div>
+
+<!-- <div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div> -->
         <!-- Footer -->
         <footer>
             <div class="row">
